@@ -261,6 +261,7 @@ rubia-craptonite-grillz=Zinc grillz
 
 rubia-biofusion-science-pack=Biofusion science packs
 rubia-biofusion-promethium-science-pack=Biofused __ITEM__promethium-science-pack__
+rubia-cargo-landing-pad-capacity=Operation Craptonite Man
 
 rubia-progression-stage1-compat-k2so=Krastorian biorecycling
 
@@ -300,6 +301,7 @@ rubia-nutrients-from-sludge=Learn to filter and process the useful organics from
 rubia-nutrient-productivity=Make nutrients more efficiently.
 rubia-biochamber-productivity-bonus=Your vast experience working with biologicals allows you to use the biochamber more efficiently.
 rubia-biofusion-promethium-science-pack=Leverage your expertise in interplanetary biology to craft __ITEM__promethium-science-pack__ more efficiently.
+rubia-cargo-landing-pad-capacity=Your experience in steering dropped cargo through Rubia's hostile airspace lets you set up one additional landing zone per planet.
 
 ;Craptonite tools
 rubia-craptonite-boots=Craptonite-reinforced boots with holmium alloy trim and soles to aid faster running. Feel the craptonite insoles with every step.
@@ -327,6 +329,7 @@ rubia-project-trashdragon=Enables rocket launches from Rubia.
 operation-iron-man-effect=Cargo drops containing players or cargo may safely land on Rubia.
 biofusion-bacteria-release=Propagation of key Gleba bacteria is no longer surface-locked.
 rubia-craptonite-lamp=Increased character light radius in the trench.
+;cargo-landing-pad-count=Cargo landing pads per planet: +__1__
 
 rubia-sniper-turret-attack-bonus=__ITEM__rubia-sniper-turret__ damage: +__1__
 
@@ -495,7 +498,7 @@ rubia-rocketizer-tips=Rubia __ENTITY__rci-rocketizer__
 rubia-craptonite-wall-tips=Rubia __ENTITY__craptonite-wall__
 
 [tips-and-tricks-item-description]
-rubia-briefing=[img=utility/warning_icon][img=utility/warning_icon][color=250,250,0][font=default-semibold]WARNING![/font][/color][img=utility/warning_icon][img=utility/warning_icon]  Cargo pods and rockets carrying people/cargo will suffer SEVERE impact damage upon entering/exiting Rubian airspace. Damage-free transport requires [technology=rubia-project-trashdragon]/[technology=planetslib-rubia-cargo-drops]. Without them, [color=250,250,0][font=default-semibold]YOU WILL DIE UPON LANDING[/font][/color] unless you can withstand a large amount of impact damage.\n\n[planet=rubia] is a windy trash planet with hurricane-force winds. The wind restricts the orientation of several entities, and will constantly barrage the surface with trashsteroids. The planet is covered in resource-rich scrap, which can be converted to useful materials using microbes in a [entity=biorecycling-plant]. You'll receive more details upon arrival.\n\nHint: Researching [technology=planet-discovery-rubia] means you can already craft everything you need.
+rubia-briefing=[img=utility/warning_icon][img=utility/warning_icon][color=250,250,0][font=default-semibold]WARNING![/font][/color][img=utility/warning_icon][img=utility/warning_icon]  Cargo pods and rockets carrying people/cargo will suffer SEVERE impact damage upon entering/exiting Rubian airspace. Damage-free transport requires [technology=rubia-project-trashdragon]/[technology=planetslib-rubia-cargo-drops]. Without them, [color=250,250,0][font=default-semibold]YOU WILL DIE UPON LANDING[/font][/color] unless you can withstand a large amount of impact damage. Hint: Researching [technology=planet-discovery-rubia] means you can already craft everything you need to land.\n\n[planet=rubia] is a windy trash planet with hurricane-force winds. The wind restricts the orientation of several entities, and will constantly barrage the surface with trashsteroids. The planet is covered in resource-rich scrap, which can be converted to useful materials using microbes in a [entity=biorecycling-plant]. You'll receive more details upon arrival.
 rubia-trashsteroid-tips=Trashsteroids are ever-present threats on Rubia:\n   • [entity=medium-trashsteroid] will bombard your base, and require turrets to defend against.\n   • They deal damage with a small chance to land a critical hit, which is rolled once per trashsteroid.\n   • [entity=cargo-pod] will suffer SEVERE impact damage upon entry, without [technology=planetslib-rubia-cargo-drops].\n   • [entity=rocket-silo] cannot safely launch rockets without [technology=rubia-project-trashdragon].\n   • [entity=garbo-grabber] can only collect [item=craptonite-chunk] from trashsteroids destroyed by physical/explosive damage within their range.\n   • Some entities are immune to bombardment, such as [item=rail], [entity=rail-signal], [entity=rubia-armored-locomotive], related entities, and any entity made with [item=craptonite-frame].\n   • [entity=craptonite-wall] block the movement of trashsteroids, but cannot spawn-block them. The walls are immune to their impact, but other entities caught in the AOE still take damage as normal.\n   • [technology=physical-projectile-damage-1]/[technology=weapon-shooting-speed-1]/etc will make [entity=medium-trashsteroid] bulkier. Higher tech levels still give you a substantial advantage--just not as massive of an advantage as you would expect.\n\n[font=default-semibold]Megabasing/UPS Tips:[/font]\n   • Not looking at Rubia will greatly lower Rubia's UPS cost, as a large fraction of time is spent on rendering trashsteroids.\n   • Do not fear exploring large swaths of Rubia's surface. I spent weeks optimizing trashsteroids to avoid spending CPU time on unnecessary chunks of the map.
 rubia-wind-tips=Eastward winds will have the following effects:\n   • [entity=inserter] and [entity=splitter] can only move items to the right.\n   • [entity=transport-belt], [entity=underground-belt], and [entity=electric-mining-drill] cannot move items to the left.\n   • [entity=logistic-robot] cannot safely navigate to [entity=requester-chest], [entity=buffer-chest], [entity=active-provider-chest], or [entity=rocket-silo].\n   • [entity=locomotive], [entity=cargo-wagon], [entity=recycler], and related cannot withstand the wind.\n   • [entity=rubia-wind-turbine] will generate power.
 rubia-crapapult-tips=[entity=crapapult] can destroy [color=250,250,0][font=default-semibold]almost any item[/font][/color] by shooting it out into Rubia's winds.\nMany technologies are researched by shooting a large number of a specific item. The crapapult is NOT a military building.
